--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="section2-div">
         <div>
           <div class="main-section-display">
-            <img src="IMAGES/service-1.jpg" alt="img" />
+            <img src="service-1.jpg" alt="img" />
           </div>
           <h2>Web Design</h2>
           <p>
@@ -55,7 +55,7 @@
 
         <div>
           <div class="main-section-display">
-            <img src="IMAGES/service-2.jpg" alt="img" />
+            <img src="service-2.jpg" alt="img" />
           </div>
           <h2>Graphic Design</h2>
           <p>
@@ -66,7 +66,7 @@
 
         <div>
           <div class="main-section-display">
-            <img src="IMAGES/service-3.jpg" alt="img" />
+            <img src="service-3.jpg" alt="img" />
           </div>
           <h2>Content Creation</h2>
           <p>
@@ -81,7 +81,7 @@
 
       <div class="main-section3-div">
         <div class="quote-tag">
-          <img src="IMAGES/quotes.svg" alt="img" width="30vh" height="30vh" />
+          <img src="quotes.svg" alt="img" width="30vh" height="30vh" />
         </div>
         <p>
           “Original and with an innate understanding of <br />their customer’s
@@ -118,7 +118,7 @@
           <button>Find Out More</button>
         </div>
         <div class="img-div">
-          <img src="IMAGES/leaf.jpg" alt="img" />
+          <img src="leaf.jpg" alt="img" />
         </div>
       </div>
       <!-- main-section4-div ends here -->
@@ -143,7 +143,7 @@
           <li>Contact</li>
         </ul>
         <div class="footer-logo-navsection">
-          <img src="IMAGES/logo-green.svg" alt="img" width="60" height="50" />
+          <img src="logo-green.svg" alt="img" width="60" height="50" />
         </div>
         <p class="p-list">Love Nature by Tyler Moore</p>
       </footer>
